# BlockScrape

./: .gitignore  Abgabe.md  README.md  docker-compose.yml  project.md
authentitication/server/: Dockerfile  docker-compose.yml  pyproject.toml
authentitication/server/auth_server/: __main__.py
authentitication/server/auth_server/db_connect/: user.py
authentitication/server/auth_server/dependencies/: authentification.py
coin/: Dockerfile  pyproject.toml
coin/coin_server/: __main__.py
coin/coin_server/database/: database_executor.py
database/cassandra/: Dockerfile  README.md  docker-compose.yml
database/cassandra/src/: cassandra_schema.cql
loadbalancer/nginx/: nginx.conf
mining/client/: Dockerfile  __main__.py  docker-compose.yml  pyproject.toml
mining/client/blockscrape_mining_client/: __init__.py  __main__.py  schema.py
mining/server/: Dockerfile  pyproject.toml
mining/server/blockscrape_mining_server/: __init__.py  __main__.py  abstract_api.py  rabbitMQ_pub.py  schema.py
result/client/: Dockerfile  docker-compose.yml  pyproject.toml
result/client/blockscrape_result_client/: __main__.py  schema.py
result/server/: Dockerfile  pyproject.toml
result/server/blockscrape_result_server/: __main__.py  main2.py  schema.py
scheduling/: Dockerfile  pyproject.toml
scheduling/manager/: Dockerfile  pyproject.toml
scheduling/manager/manager_server/: __main__.py
scheduling/scheduling_server/: __main__.py
scheduling/scheduling_server/cassandra_executor/: executor.py
scheduling/server/: pyproject.toml
scheduling/server/scheduling_server/: __main__.py
scheduling/server/scheduling_server/cassandra_executor/: executor.py
scraping/client/: Dockerfile
scraping/client/blockscrape_result_client/: __main__.py  schema.py
scraping/server/: Dockerfile  pyproject.toml
scraping/server/blockscrape_result_server/: __init__.py  __main__.py
website/backend/: Dockerfile  __main__.py  docker-compose.yml  pyproject.toml
website/backend/routers/: order.py  user.py
website/backend/user_server/: __main__.py
website/backend/user_server/config/: __init__.py
website/backend/user_server/db_connect/: order.py
website/backend/user_server/dependencies/: db_connector.py  server_information.py  validate_user.py
website/backend/user_server/routers/: coin.py  order.py  user.py
website/frontend/: docker-compose.yml
website/frontend/user-interface/: Dockerfile  package-lock.json  package.json
website/frontend/user-interface/.nginx/: nginx.conf
website/frontend/user-interface/public/: index.html
website/frontend/user-interface/src/: App.tsx  index.tsx
website/frontend/user-interface/src/authentication/: authentication.tsx  user.ts  user.tsx
website/frontend/user-interface/src/authentication/Register/: register.tsx
website/frontend/user-interface/src/authentication/mfa/: doMfa.tsx  verify.tsx
website/frontend/user-interface/src/coin/: coin.tsx
website/frontend/user-interface/src/coin/application/: application.tsx
website/frontend/user-interface/src/coin/application/fetch/: coinBackend.tsx
website/frontend/user-interface/src/footer/: impressum.tsx
website/frontend/user-interface/src/global/: _mainLinks.tsx
website/frontend/user-interface/src/global/404/: 404.tsx
website/frontend/user-interface/src/global/constants/: constants.ts
website/frontend/user-interface/src/main/: main.tsx
website/frontend/user-interface/src/main/application/: application.tsx
website/frontend/user-interface/src/main/application/fetch/: userBackend.tsx
website/frontend/user-interface/src/order/: order.tsx
website/frontend/user-interface/src/order/add/: addOrder.tsx
website/frontend/user-interface/src/order/application/: application.tsx
website/frontend/user-interface/src/order/application/add/: addOrder.tsx
website/frontend/user-interface/src/order/application/fetch/: orderBackend.ts  orderBackend.tsx
website/frontend/user-interface/src/order/application/open/: openOrder.tsx
