[tool.poetry]
name = "blockscrape-mining-client"
version = "0.1.0"
description = ""
authors = ["Lars Jaeger <lars@jgr.one>"]
readme = "README.md"
packages = [{include = "blockscrape_mining_client"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
pydantic = "^2.1.1"
python-socketio = {extras = ["client"], version = "^5.9.0"}


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
