[tool.poetry]
name = "blockscrape-result-client"
version = "0.1.0"
description = ""
authors = ["Lars Jaeger <lars@jgr.one>"]
readme = "README.md"
packages = [{include = "blockscrape_result_client"}]

[tool.poetry.dependencies]
python = "^3.10"
python-socketio = "^5.9.0"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
